# mosaic

./: .env.example  .env.test  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  alembic.ini  pyproject.toml  work-memory-system-spec.md
.claude/: settings.json
.claude/agents/: app-architect.md  project-architect.md  project-qa.md  python-dev.md  python-qa.md
.claude/skills/alembic-migrate/: SKILL.md
.claude/skills/architecture-review/: SKILL.md
.claude/skills/async-patterns/: SKILL.md
.claude/skills/linting/: SKILL.md
.claude/skills/mcp-api-design/: SKILL.md
.claude/skills/prompt-writing/: SKILL.md
.claude/skills/pytest-testing/: SKILL.md
.serena/: project.yml
.serena/memories/: code_style.md  multi_agent_system.md  project_overview.md  project_structure.md  suggested_commands.md  task_completion.md  tech_stack.md
alembic/: env.py
alembic/versions/: 001_add_person_fields.py  002_update_reminder_fields.py  003_update_client_contact.py  3fee97713352_increase_work_session_duration_.py  58721921d48e_add_last_notified_at_to_reminders_for_.py  5a8b13d16ac1_add_action_items_and_bookmarks_tables.py  5b34a831393a_remove_start_time_and_end_time_from_.py  962c0bbfa59e_make_project_on_behalf_of_id_nullable.py  a662822bf6ea_make_note_entity_type_and_entity_id_.py  ef648c8126f5_add_title_and_tags_to_meeting.py  f4e1841d043f_add_tags_to_remaining_models.py  f686bea1590c_initial_schema.py
docker/: docker-compose.yml
scripts/: build_macos_app.sh  test_notifications.py
src/mosaic/: config.py  server.py
src/mosaic/models/: __init__.py  action_item.py  base.py  bookmark.py  client.py  employer.py  meeting.py  note.py  person.py  project.py  reminder.py  types.py  user.py  work_session.py
src/mosaic/prompts/: __init__.py  prompt_handlers.py  prompt_registry.py
src/mosaic/repositories/: __init__.py  action_item_repository.py  base.py  bookmark_repository.py  client_repository.py  employer_repository.py  (+7 more)
tests/: conftest.py  test_fixtures_verification.py
tests/fixtures/: __init__.py  database_fixtures.py  mcp_fixtures.py
tests/integration/: TEST_SUMMARY.md  test_action_item_tools.py  test_all_mcp_tools.py  test_all_mcp_tools_fixes.py  test_bookmark_tools.py  test_complex_workflows.py  test_create_person_tool.py  test_delete_work_session_tool.py  test_log_meeting_tool.py  test_log_work_session_tool.py  test_logging_tools.py  test_meeting_work_session_atomic.py  test_notification_delivery.py  test_prompt_execution.py  test_query_system_comprehensive.py  test_query_tool.py  test_reminder_scheduling.py  test_reminder_tools.py  test_resource_access.py  test_result_converter_integration.py  test_server_lifecycle.py  test_structured_query_integration.py  test_timecard_generation.py  test_timecard_tool.py  test_update_tools.py
tests/unit/: test_prompt_schemas.py  test_prompts.py  test_resources.py  test_time_utils.py
(+95 files in other folders)
